quetzal-frontend/src/styles/Sidebar.css
.sidebar {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #cccccc;
    width: 12%;
    padding: 16px;
    position: fixed;
    left: 0;
    top: 48px;
    height: calc(100vh - 48px);
    border-right: 1px solid #aaaaaa;
    transition: width 250ms ease;
}

.sidebar.closed {
    width: 0;
    overflow: hidden;
    padding: 0;
}
.sidebar-top {
    justify-content: space-between;
    display: flex;
    flex-direction: column;
}

.sidebar-bottom {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.sidebar-menu {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
}

.sidebar-pages-top {
    border-bottom: 4px solid transparent;
    padding: 8px;
    transition: font-size 250ms ease;
    transition: background-color 250ms ease;
}
.sidebar-pages-top:hover {
    background-color: #aaaaaa;
    font-size: 18px;
}

.sidebar-profile {
    font-size: 14px;
    background-color: #bbbbbb;
    align-items: center;
    justify-content: left;
    width: 85%;
    max-width: 85%;
    display: flex;
    margin-bottom: 15%;
    padding: 8px;
    box-sizing: border-box;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    transition: background-color 250ms ease;
}

.sidebar-profile:hover {
    background-color: #aaaaaa;
}

.sidebar-options {
    background-color: #bbbbbb;
    font-size: 14px;
    width: 85%;
    max-width: 85%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    margin-bottom: 15%;
    padding: 0;
    box-sizing: border-box;
}

.sidebar-options-icons {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    transition: font-size 250ms ease;
    transition: background-color 250ms ease;
}
.sidebar-options-icons:hover {
    background-color: #aaaaaa;
    font-size: 17px;
}

.sidebar-options-toggle {
    background-color: #aaaaaa;
    align-items: center;
    justify-content: space-evenly;
    width: 15%;
    max-width: 15%;
    display: flex;
    margin-bottom: 15%;
    padding: 8px;
    box-sizing: border-box;
    transition: background-color 250ms ease;
}

.sidebar-options-toggle:hover {
    background-color: #999999;
}

.sidebar-pages-top,
.sidebar-profile,
.sidebar-options-icons,
.sidebar-options-toggle {
    cursor: pointer;
}

